--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="score-board">
       <div class="score">
         <p id="user-score">0</p>
-        <p>You</p>
+        <p id="You">You</p>
       </div>
       <div class="score">
         <p id="comp-score">0</p>
-        <p>Comp</p>
+        <p id="computer">Computer</p>
       </div>
     </div>
 
